# plura

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
assets/: demo.mov
migrations/: 20241217133534_init_systems.sql  20241217163630_init_members.sql  20250109093158_switch_triggers.sql  20250110153933_systems_owner_index.sql  20250112134655_system_oauth_process.sql  20250608185643_merge_trigger_fields.sql  20250608190743_rename_trigger_text.sql  20250614172833_message_logging.sql  20250615174444_is_prefix_to_generic_int.sql  20250618124409_member_aliasing.sql  20250622162948_clearer_field_names.sql  20250623132809_add_enabled_field.sql  20250623133024_database_level_checks_for_enabled_members.sql  20250719222019_remove_system_name.sql  20250719222145_remove_oauth_name.sql
src/: env.rs  main.rs  oauth.rs  util.rs
src/commands/: alias.rs  member.rs  members.rs  mod.rs  system.rs  trigger.rs  triggers.rs
src/events/: mod.rs
src/interactions/: member.rs  message.rs  mod.rs  trigger.rs
src/models/: alias.rs  member.rs  message.rs  mod.rs  system.rs  trigger.rs  trust.rs  user.rs
